--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "next": "9.2.1",
+    "next-offline": "^5.0.0",
     "react": "16.12.0",
     "react-dom": "16.12.0"
+  },
+  "devDependencies": {
+    "tsconfig-paths-webpack-plugin": "^3.2.0"
   }
 }
