--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "generate": "graphql-codegen --config codegen.js"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -19,7 +20,9 @@
     "next-offline": "^5.0.0",
     "next-with-apollo": "^5.0.0",
     "react": "16.12.0",
-    "react-dom": "16.12.0"
+    "react-dom": "16.12.0",
+    "react-lottie": "^1.2.3",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.12.2",
@@ -29,6 +32,8 @@
     "@graphql-codegen/typescript-react-apollo": "^1.12.2",
     "@types/node": "^13.7.1",
     "@types/react": "^16.9.19",
+    "@types/react-lottie": "^1.2.3",
+    "@types/styled-components": "^4.4.3",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.7.5"
   }
