--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "9.2.1",
     "next-offline": "^5.0.0",
     "next-with-apollo": "^5.0.0",
+    "ramda": "^0.27.0",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-lottie": "^1.2.3",
@@ -33,6 +34,7 @@
     "@graphql-codegen/typescript-operations": "^1.12.2",
     "@graphql-codegen/typescript-react-apollo": "^1.12.2",
     "@types/node": "^13.7.1",
+    "@types/ramda": "^0.26.41",
     "@types/react": "^16.9.19",
     "@types/react-lottie": "^1.2.3",
     "@types/styled-components": "^4.4.3",
